fix that kate/kwrite don't accept the file:/// protocol in URL on command line

BUG: 363297